--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -10,22 +10,43 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 exec-once = waybar 
-exec = swaybg -i ~/Pictures/wallpapers/pixel.png -m fill
+# exec = waybar 
+# exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# exec-once =hyprctl setcursor Qogir 24
+exec = swaybg -m fill -i ~/Pictures/wallpapers/wallhaven-girl-puppies.jpg
+exec = nm-applet --indicator
+exec = dunst
+exec = swayidle -w \
+       timeout 300 'swaylock -f -i ~/Pictures/wallpapers/blue_night.jpg fill' \
+       #timeout 400 'swaymsg "output * dpms off"' \
+       timeout 400 'hyprctl dispatch dpms off' \
+       resume 'hyprctl dispatch dpms on' \
+       #resume 'swaymsg "output * dpms on"' \
+       before-sleep 'swaylock -f -c 000000'
+#
+# exec = swayidle -w \
+#        timeout 300 'swaylock -f -c 000000' \
+#        timeout 600 'swaymsg "output * dpms off"' \
+#        resume 'swaymsg "output * dpms on"' \
+#        before-sleep 'swaylock -f -c 000000'
+
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+bind = ALT_SHIFT, C, exec, hyprctl --batch "keyword input:kb_layout us ; keyword input:kb_variant dvorak"
+
 input {
     kb_layout = us
     kb_variant = dvorak
     kb_model =
-    kb_options =
+    kb_options = ctrl:nocaps, grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -42,8 +63,9 @@ general {
 
     gaps_in = 5
     gaps_out = 5
-    border_size = 1
-    col.active_border = rgba(1affffee)
+    border_size = 3
+    # col.active_border = rgba(1affffee)
+    col.active_border = rgba(31748fee)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -53,7 +75,7 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = false
+    blur = true
     blur_size = 3
     blur_passes = 1
     blur_new_optimizations = on
@@ -65,7 +87,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -104,7 +126,15 @@ device:epic mouse V1 {
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
  windowrule = float, ^(sdl)$
+ windowrule = float, ^(zoom)$
  windowrule = float, ^(thunar)$
+ windowrule = float, ^(Nautilus)$
+ windowrule = float, ^(Files)$
+ windowrule = float, ^(PulseAudio Volume Control)$
+ windowrule = nofocus, ^(Ibus-ui-gtk3)$
+ windowrule = float, ^(pavucontrol)$
+ # windowrule = nofocus, ^(pavucontrol)$
+ #windowrule=workspace 3 silent,firefox
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
@@ -120,8 +150,12 @@ bind = ,XF86AudioLowerVolume, exec , pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = ,XF86AudioMute, exec , pactl set-sink-mute @DEFAULT_SINK@ toggle 
 bind = ,XF86AudioMicMute, exec , pactl set-source-mute @DEFAULT_SOURCE@ toggle 
 
+# Brightness Control
 bind = ,XF86MonBrightnessUp ,exec, brightnessctl  set +5% # increase screen brightness
-bind = ,XF86MonBrightnessDown ,exec, brightnessctl set 5%-# decrease screen brightness
+bind = ,XF86MonBrightnessDown ,exec, brightnessctl set 5%- # decrease screen brightness
+
+# bind=,xf86monbrightnessup,exec,light -A 5
+# bind=,xf86monbrightnessdown,exec,light -U 5
 
 # Media player controls
 bind = ,XF86AudioPlay, exec, playerctl play
@@ -129,11 +163,12 @@ bind = ,XF86AudioPause, exec, playerctl pause
 bind = ,XF86AudioNext, exec, playerctl next
 bind = ,XF86AudioPrev, exec, playerctl previous
 
-bind = $mainMod_SHIFT, T, exec, alacritty
+bind = $mainMod, RETURN, exec, foot
+# bind = ALT_SHIFT, T, exec, kitty 
 bind = SUPER_SHIFT, E, exit, 
 bind = ALT_SHIFT, W, killactive, 
 # bind = $mainMod, E, exec, dolphin
-bind = $SUPER, N, exec, thunar
+bind = $SUPER, N, exec, nemo
 bind = $mainMod_SHIFT, SPACE, togglefloating, 
 bind = $mainMod_SHIFT, D, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
@@ -141,10 +176,13 @@ bind = $mainMod_SHIFT, F, fullscreen,
 bind = $mainMod_SHIFT, R, pin, 
 #bind = $mainMod, SPACE, float 
 bind = $mainMod, PERIOD, togglesplit, # dwindle
+bind = ALT_SHIFT, S, exec, slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'grim_%Y-%m-%d-%H%M%S.png')
+
 
 
 bind = $mainMod, T, togglegroup, 
-bind = $SUPER, f, changegroupactive, f
+bind = $ALT, c, changegroupactive, f
+bind = $ALT, TAB, changegroupactive, f
 bind = $SUPER, b, changegroupactive, b
 
 # Move focus with mainMod + arrow keys
@@ -186,3 +224,5 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+windowrulev2 = bordercolor rgba(ff0066ee), xwayland: 1
