--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -14,13 +14,14 @@ set $mod4 Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:IBM Plex Mono 10
+# font pango:Hermit 10
+font pango:Iosevka 11
 
-#default_border pixel 2
+default_border pixel 1
 # for_window [class=".*"] border pixel 0
 #default_border none
 #hide_edge_borders vertical
-#default_floating_border pixel 3
+default_floating_border pixel 1
 # default_floating_border normal
 #new_window none
 
@@ -36,11 +37,12 @@ font pango:IBM Plex Mono 10
 exec --no-startup-id dex --autostart --environment i3
 #bindsym $mod+c exec makoctl dismiss
 # exec polybar example &
-exec_always mako
+# notification
+# exec_always mako
 exec_always picom
 exec_always --no-startup-id killall back4.sh 
 # exec_always --no-startup-id back4.sh 0.03 $HOME/Pictures/pixel_snow_mountain.gif
-exec_always feh --bg-fill $HOME/Pictures/wallpapers/dark-cat-rosewater.png
+exec_always feh --bg-fill $HOME/Pictures/wallpapers/black_minimal_kanagawa.png
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -75,9 +77,14 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+floating_modifier $mod4
 
-# start a terminal
+# F keys volume test
+bindsym $mod+F11 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +3% && $refresh_i3status
+bindsym $mod+F10 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -3% && $refresh_i3status
+bindsym $mod+F9 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec gnome-terminal --hide-menubar
 bindsym $mod+Return exec alacritty
@@ -93,10 +100,12 @@ for_window [title="hello"] floating enable
 for_window [title="Planner"] floating enable 
 for_window [class="OpenGL"] floating enable 
 for_window [title="qemu"] floating enable
-for_window [class="kitty"] floating enable
+for_window [title="Blender Render"] floating enable
+for_window [title="Meeting Chat" instance="zoom"] floating enable
+# for_window [class="kitty"] floating enable
 for_window [class="sdl" instance="sdl"] floating enable
 for_window [class="Nautilus"] floating enable
-for_window [class="Zoom"] floating enable
+for_window [class="Zoom Meeting"] floating enable
 for_window [class="Thunar"] floating enable
 bindsym $mod+r sticky toggle
 
@@ -114,6 +123,7 @@ bindsym $mod+Shift+d exec --no-startup-id "dmenu_run"
 
 # change focus
 bindsym $mod+h focus left
+bindsym $mod+` focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
@@ -146,7 +156,7 @@ bindsym $mod+v split v
 bindsym $mod+Shift+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+#bindsym $mod+s layout stacking
 bindsym $mod+t layout tabbed
 bindsym $mod+period layout toggle split
 
@@ -238,9 +248,9 @@ bindsym $mod+Shift+S exec flameshot gui
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3status --transparency
-    #mode hide
-    # status_command i3blocks
+    # status_command i3status --transparency
+    mode hide
+    status_command polybar -c ~/.config/leftwm/themes/Ascent/polybar.config mainbar
 }
 
 gaps outer 3
