--- a/dots/.config/waybar/config
+++ b/dots/.config/waybar/config
@@ -1,31 +1,38 @@
 {
     "layer": "top", // Waybar at top layer
-    "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 10, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
+    "position": "left", // Waybar position (top|bottom|left|right)
+    //"height": 8, // Waybar height (to be removed for auto height)
+    "width": 5, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": ["wlr/workspaces", "wlr/mode", "custom/media", "wlr/window"],
     "modules-center": ["clock"],
-    "modules-right": [ "tray","battery", "idle_inhibitor",  "network", "pulseaudio"],
+    "modules-right": [ "tray","battery", "pulseaudio"],
     // Modules configuration
+    "wlr/window": {
+        "max-length": 150,
+        "rotate": 90
+    },
     "wlr/workspaces": {
         "disable-scroll": false,
-        "disable-click": false,
+        "disable-click": true,
         "all-outputs": true,
-        "format": "{name}: {icon}",
+        //"format": "{name}: {icon}",
+        "format": "{icon}",
         "format-icons": {
-            "4": "",
-            "3": "",
-            //"3": "",
-            "1": "",
-            "5": "",
+            // "1": "",
+            // "2": "",
+            // "4": "",
+            // "3": "",
+            // "5": "",
             "urgent": "",
             "focused": "",
             "default": ""
         },
     "on-scroll-up": "hyprctl dispatch workspace e+1",
     "on-scroll-down": "hyprctl dispatch workspace e-1",
+    "on-click" : "activate",
+    "rotate": 90,
     },
     "keyboard-state": {
         "numlock": true,
@@ -80,7 +87,8 @@
         "timezone": "Asia/Manila",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         //"format-alt": "{:%Y-%m-%d}"
-        "format": "{:%a, %d. %b  %H:%M}"
+        "format": "{:%a, %d. %b  %H:%M}",
+        "rotate": 90
     },
     "cpu": {
         "format": "{usage}% ",
@@ -114,7 +122,8 @@
         "format-alt": "{time} {icon}",
         // "format-good": "", // An empty format will hide the module
         // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": ["", "", "", "", ""],
+        "rotate": 90, 
     },
     "battery#bat2": {
         "bat": "BAT2"
@@ -126,7 +135,8 @@
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "rotate": 90,
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
@@ -146,6 +156,7 @@
             "default": ["", "", ""]
         },
         "on-click": "pavucontrol",
+        "rotate": 90,
     },
     "custom/media": {
         "format": "{icon} {}",
