--- a/dots/.tmux/own.conf
+++ b/dots/.tmux/own.conf
@@ -1,30 +1,24 @@
 set -g status-position bottom
 set -g status-justify centre
 set -g status-style "bg=#000000"
-#set -g status-style "bg=#1a0000"
 set -g window-style ""
 set -g window-active-style ""
 
 module_left_1="#h"
 module_left_2=">> [ #S ]"
 
-set -g status-left " #[fg=#eeeeee]$module_left_1 #[fg=#6b7089]$module_left_2"
-#set -g status-left " #[fg=#ff8da1]$module_left_1 #[fg=#ff748c]$module_left_2"
+set -g status-left " #[fg=#eeeeee]$module_left_1 #[fg=#669799]$module_left_2"
 set -g status-left-style ""
 set -g status-left-length 50
 
-set -g status-right "$module_right_1 #[fg=#ff748c]$module_right_2 "
+set -g status-right "#[fg=#667799]$module_right_1 #[fg=#669999]$module_right_2 "
 set -g status-right-style "fg=#eeeeee"
-#set -g status-right-style "fg=#ff8da1"
 set -g status-right-length 25
 
 set -g window-status-current-style "bold"
-#set -g window-status-style "fg=#ff748c"
 set -g window-status-style "fg=#eeeeee"
-#set -g window-status-format " #[fg=#ff748c]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
 set -g window-status-format " #[fg=#eeeeee]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
-#set -g window-status-current-format " #[fg=#ff748c]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
-set -g window-status-current-format " #[fg=#ee2211]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
+set -g window-status-current-format " #[fg=#66cc99]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
 set -g window-status-separator ""
 
 set -g pane-active-border-style "fg=#eeeeee"
