--- a/dots/.tmux/rose-pine.conf
+++ b/dots/.tmux/rose-pine.conf
@@ -4,7 +4,7 @@ set -g status-position bottom
 set -g status-justify centre
 set -g status-style "bg=#191724"
 set -g window-style ""
-set -g window-active-style "#e0aaff"
+# set -g window-active-style "#e0aaff"
 
 # modules
 module_left_1="#h"
