new neovim; lf kitty image preview

--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -1,7 +1,9 @@
 unbind C-b
 set -g prefix C-Space
 
-set -g mouse on
+setw -g mouse on
+set-window-option -g mode-keys vi
+bind -n M-g display-popup -E "tmux new-session lf"
 ##bind -n C-h select-pane -L
 #bind -n C-j select-pane -D
 #bind -n C-s select-pane -U
@@ -23,12 +25,16 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set -g base-index 1
 #setw -g pane-base-index 1
-#source-file ~/.tmux/own.conf
 source-file ~/.tmux/own.conf
 # Undercurl
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
+bind-key -r i run-shell "tmux neww /home/chaeng/projects/bash/tmux/configFiles.s"
+bind-key -r N run-shell "tmux neww nvim /home/chaeng/.config/nvim/init.lua"
+bind-key -r V run-shell "tmux neww bash /home/chaeng/projects/bash/fzf_tmux_dir/fzf.sh"
+bind-key -r W run-shell "tmux neww /home/chaeng/projects/bash/fzf_wallpaper.sh"
 unbind r
+
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
