--- a/dots/.config/alacritty/alacritty.yml
+++ b/dots/.config/alacritty/alacritty.yml
@@ -1,12 +1,44 @@
-# Colors (Tomorrow Night Bright)
-custom_cursor_colors: true
+custom_cursor_colors: false
 cursor:
   # red cursor
   # text: '#bb0b16'
   # cursor: '#bc0116'
   style:
-    shape: Underline
+    shape: Block
 scheBlockmes: 
+  kanagawa: &kanagawa
+    primary:
+      background: '0x1f1f28'
+      foreground: '0xdcd7ba'
+
+    normal:
+      black:   '0x090618'
+      red:     '0xc34043'
+      green:   '0x76946a'
+      yellow:  '0xc0a36e'
+      blue:    '0x7e9cd8'
+      magenta: '0x957fb8'
+      cyan:    '0x6a9589'
+      white:   '0xc8c093'
+
+    bright:
+      black:   '0x727169'
+      red:     '0xe82424'
+      green:   '0x98bb6c'
+      yellow:  '0xe6c384'
+      blue:    '0x7fb4ca'
+      magenta: '0x938aa9'
+      cyan:    '0x7aa89f'
+      white:   '0xdcd7ba'
+
+    selection:
+      background: '0x2d4f67'
+      foreground: '0xc8c093'
+
+    indexed_colors:
+      - { index: 16, color: '0xffa066' }
+      - { index: 17, color: '0xff5d62' }
+
   nord: &nord
     primary:
       background: '#2e3440'
@@ -25,9 +57,6 @@ scheBlockmes:
       matches:
         foreground: CellBackground
         background: '#88c0d0'
-      bar:
-        background: '#434c5e'
-        foreground: '#d8dee9'
     normal:
       black: '#3b4252'
       red: '#bf616a'
@@ -56,138 +85,30 @@ scheBlockmes:
       cyan: '#6d96a5'
       white: '#aeb3bb'
 
-  everforest_dark_hard: &everforest_dark_hard
+
+  mono: &mono
     primary:
-      background: '#2b3339'
-      foreground: '#d3c6aa'
+      background: '#eeeeee'
+      foreground: '#000000'
     normal:
-      black:   '#4b565c'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
-      magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
+      black:   '#000000'
+      red:     '#f08080'
+      green:   '#808080'
+      yellow:  '#808080'
+      blue:    '#8080f0'
+      magenta: '#808010'
+      cyan:    '#808080'
+      white:   '#eeeeee'
     bright:
-      black:   '#4b565c'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
-      magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
-  everforest_dark_medium: &everforest_dark_medium
-    primary:
-      background: '#2f383e'
-      foreground: '#d3c6aa'
-    normal:
-      black:   '#4b565c'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
-      magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
-    bright:
-      black:   '#4b565c'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
-      magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
-  everforest_dark_soft: &everforest_dark_soft
-    primary:
-      background: '#323d43'
-      foreground: '#d3c6aa'
-    normal:
-      black:   '#4b565c'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
-      magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
-    bright:
-      black:   '#4b565c'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
-      magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
-  everforest_light_hard: &everforest_light_hard
-    primary:
-      background: '#fff9e8'
-      foreground: '#5c6a72'
-    normal:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
-      magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#dfddc8'
-    bright:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
-      magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#dfddc8'
-  everforest_light_medium: &everforest_light_medium
-    primary:
-      background: '#fdf6e3'
-      foreground: '#5c6a72'
-    normal:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
-      magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#dfddc8'
-    bright:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
-      magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#dfddc8'
-  everforest_light_soft: &everforest_light_soft
-    primary:
-      background: '#f8f0dc'
-      foreground: '#5c6a72'
-    normal:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
-      magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#dfddc8'
-    bright:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
-      magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#dfddc8'
+      black:   '#000000'
+      red:     '#eeeeee'
+      green:   '#909010'
+      yellow:  '#8f8f80'
+      blue:    '#808080'
+      magenta: '#000000'
+      cyan:    '#808080'
+      white:   '#eeeeee'
+
 
 # Colors (Gruvbox dark)
   gruvbox: &gruvbox
@@ -195,8 +116,8 @@ scheBlockmes:
       # hard contrast background - '#1d2021'
       #background: &gruvbox_dark_bg '#282828'
       #
-      background: '#1d2021'
-      #background: '#282828'
+      #background: '#1d2021'
+      background: '#282828'
       # soft contrast background - '#32302f'
       foreground:        '#ebdbb2'
       bright_foreground: '#fbf1c7'
@@ -255,9 +176,10 @@ scheBlockmes:
   tokyo-night: &tokyo-night
     cursor:
       text: '#000000'
-      cursor: '#bc0116'
+      # cursor: '#bc0116'
     primary:
-      background: '0x1a1b26'
+      # background: '0x1a1b26'
+      background: '0x1f1f28'
       foreground: '0xa9b1d6'
 
     # Normal colors
@@ -314,7 +236,8 @@ scheBlockmes:
     # colors:
     # Default colors
     primary:
-      background: '#000000'
+      # background: '#0f0f0f'
+      background: '#161616'
       foreground: '#eaeaea'
 
     # Normal colors
@@ -376,49 +299,15 @@ scheBlockmes:
       - { index: 17, color: '0xF5E0DC' }
 
 
-  # Colors (Nightfly)
-  nightfly: &nightfly
-     # Default colors
-    primary:
-       background: '#011627'
-       foreground: '#acb4c2'
-
-    cursor:
-      text: '#fafafa'
-      cursor: '#9ca1aa'
-
-    selection:
-      text: '#080808'
-      background: '#b2ceee'
-
-     # Normal colors
-    normal:
-      black:   '#1d3b53'
-      red:     '#fc514e'
-      green:   '#a1cd5e'
-      yellow:  '#e3d18a'
-      blue:    '#82aaff'
-      magenta: '#c792ea'
-      cyan:    '#7fdbca'
-      white:   '#a1aab8'
-
-     # Bright colors
-    bright:
-      black:   '#7c8f8f'
-      red:     '#ff5874'
-      green:   '#21c7a8'
-      yellow:  '#ecc48d'
-      blue:    '#82aaff'
-      magenta: '#ae81ff'
-      cyan:    '#7fdbca'
-      white:   '#d6deeb'
-
   latte: &latte
-
     # Default colors
     primary:
-      background: '#EFF1F5' # base
-      foreground: '#4C4F69' # text
+      # background: '#EFF1F5' # base
+      # background: '#dfdfdf' # base
+      # background: '#e1e1e1' # base
+      background: '#d7d7d7' # base
+      foreground: '#000000' # text
+      # foreground: '#4C4F69' # text
       # Bright and dim foreground colors
       dim_foreground: '#4C4F69' # text
       bright_foreground: '#4C4F69' # text
@@ -493,8 +382,6 @@ scheBlockmes:
     indexed_colors:
       - { index: 16, color: '#FE640B' }
       - { index: 17, color: '#DC8A78' }
-
-
 
   frappe: &frappe
 
@@ -577,8 +464,6 @@ scheBlockmes:
       - { index: 16, color: '#EF9F76' }
       - { index: 17, color: '#F2D5CF' }
 
-
-
   macchiato: &macchiato
 
     # Default colors
@@ -659,8 +544,6 @@ scheBlockmes:
     indexed_colors:
       - { index: 16, color: '#F5A97F' }
       - { index: 17, color: '#F4DBD6' }
-
-
 
   mocha: &mocha
 
@@ -852,26 +735,58 @@ scheBlockmes:
       end:
         foreground: "#6e6a86"
         background: "#1f1d2e"
+          
+  oxocarbon: &oxocarbon
+    primary:
+      background: "#161616"
+      foreground: "#ffffff"
+    search:
+      matches:
+        foreground: CellBackground
+        background: '#ee5396'
+      footer_bar:
+        background: '#262626'
+        foreground: '#ffffff'
+    normal:
+      black: "#262626"
+      magenta: "#ff7eb6"
+      green: "#42be65"
+      yellow: "#ffe97b"
+      blue: "#33b1ff"
+      red: "#ee5396"
+      cyan: "#3ddbd9"
+      white: "#dde1e6"
+    bright:
+      black: "#393939"
+      magenta: "#ff7eb6"
+      green: "#42be65"
+      yellow: "#ffe97b"
+      blue: "#33b1ff"
+      red: "#ee5396"
+      cyan: "#3ddbd9"
+      white: "#ffffff"
+
 font:
   normal:
-    family: Iosevka
+    family: VictorMono
     style: Regular
-
   bold:
-    family: Iosevka
+    family: VictorMono
     style: Bold
-
   italic:
-    family: Iosevka
+    family:  VictorMono
     style: Italic
-
   bold_italic:
-    family: Iosevka
+    family: VictorMono
     style: Bold Italic
 
-  size: 11
+  size: 12
 
 window:
   opacity: 0.9
   decoration: none
-colors: *rose_pine
+  padding:
+    x: 17
+    y: 0
+    # dynamic_padding: true
+colors: *mocha
