--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -15,7 +15,7 @@ set $mod4 Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:Hermit 10
-font pango:Iosevka 11
+font pango:Space Mono Nerd Font 9
 
 default_border pixel 1
 # for_window [class=".*"] border pixel 0
@@ -40,9 +40,8 @@ exec --no-startup-id dex --autostart --environment i3
 # notification
 # exec_always mako
 exec_always picom
-exec_always --no-startup-id killall back4.sh 
 # exec_always --no-startup-id back4.sh 0.03 $HOME/Pictures/pixel_snow_mountain.gif
-exec_always feh --bg-fill $HOME/Pictures/wallpapers/black_minimal_kanagawa.png
+exec_always feh --bg-fill $HOME/Pictures/wallpapers/Park.jpg
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -123,7 +122,7 @@ bindsym $mod+Shift+d exec --no-startup-id "dmenu_run"
 
 # change focus
 bindsym $mod+h focus left
-bindsym $mod+` focus left
+bindsym $mod+Tab focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
@@ -172,10 +171,10 @@ bindsym $mod+Shift+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $ws1 "1: "
-set $ws2 "2: "
-set $ws3 "3: "
-set $ws4 "4: "
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
@@ -208,7 +207,7 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
-bindsym $mod+Shift+R reload
+bindsym $mod+Shift+r reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+p restart
 # exit i3 (logs you out of your X session)
@@ -248,9 +247,9 @@ bindsym $mod+Shift+S exec flameshot gui
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    # status_command i3status --transparency
-    mode hide
-    status_command polybar -c ~/.config/leftwm/themes/Ascent/polybar.config mainbar
+    status_command i3status-rs
+    # mode hide
+    # status_command polybar -c ~/.config/leftwm/themes/Ascent/polybar.config mainbar
 }
 
 gaps outer 3
@@ -260,10 +259,12 @@ smart_borders on
 smart_gaps on
 
 #<colorclass> <border> <background> <text> <indicator> <child_border>
-client.focused #26233a #232136 #f6c177 #ff8da1
-client.unfocused #01121A #01121A #986e75 #ff8da1
+# client.focused #26233a #232136 #f6c177 #ff8da1
+# client.unfocused #01121A #01121A #986e75 #ff8da1
 # client.unfocused #000000 #000000  #986e75  #ff8da1
 # client.focused #10002b  #10002b #e0aaff  #ff8da1
+client.unfocused #111111 #111111  #a9a9a9  #ff8da1
+client.focused #0f0f1f #0f0f0f  #eeeeee  #0efece
 
 #exec xautolock -time 6 -locker 'i3lock -e -c 223344 && echo mem > /sys/power/state'
 #exec xautolock -time 6 -locker 'i3lock -e -c 223344'
