--- a/dots/.config/picom/picom.conf
+++ b/dots/.config/picom/picom.conf
@@ -8,8 +8,7 @@ transition-pow-x = 0.1
 transition-pow-y = 0.1
 transition-pow-w = 0.1
 transition-pow-h = 0.1
-size-transition = true
-
+size-transition = false
 
 #################################
 #             Corners           #
@@ -154,7 +153,7 @@ fade-exclude = [
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1
+inactive-opacity = 1.0
 # inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
@@ -232,7 +231,7 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false;
+blur-background = false;
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
@@ -317,8 +316,8 @@ mark-ovredir-focused = true;
 # Try to detect windows with rounded corners and don't consider them 
 # shaped windows. The accuracy is not very high, unfortunately.
 #
-# detect-rounded-corners = false
-detect-rounded-corners = true;
+detect-rounded-corners = false
+# detect-rounded-corners = true;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
