--- a/dots/.config/waybar/config
+++ b/dots/.config/waybar/config
@@ -5,26 +5,54 @@
     "width": 5, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
-    "modules-left": ["wlr/workspaces", "wlr/mode", "custom/media", "wlr/window"],
+    // "modules-left": ["wlr/workspaces", "wlr/mode", "custom/media", "wlr/window"],
+    "modules-left": ["sway/workspaces", "sway/mode", "custom/media", "sway/window"],
     "modules-center": ["clock"],
     "modules-right": [ "tray","battery", "pulseaudio"],
     // Modules configuration
-    "wlr/window": {
+    "sway/window": {
         "max-length": 150,
         "rotate": 90
     },
-    "wlr/workspaces": {
+    "wlr/workspaces" : {
+        "format": "{icon}",
+        "format-icons": {
+            "1": "I",
+            "2": "II",
+            "3": "III",
+            "4": "IV",
+            "5": "V",
+            "6": "VI",
+            "7": "VII",
+            "8": "VIII",
+            "9": "IX",
+            "0": "X",
+            "urgent": "",
+            "focused": "",
+            "default": ""
+        },
+    "on-scroll-up": "hyprctl dispatch workspace e+1",
+    "on-scroll-down": "hyprctl dispatch workspace e-1",
+    "on-click" : "activate",
+    "rotate": 90,
+    },
+    "sway/workspaces": {
         "disable-scroll": false,
         "disable-click": true,
         "all-outputs": true,
         //"format": "{name}: {icon}",
         "format": "{icon}",
         "format-icons": {
-            // "1": "",
-            // "2": "",
-            // "4": "",
-            // "3": "",
-            // "5": "",
+            "1": "일",
+            "2": "이",
+            "4": "삼",
+            "3": "사",
+            "5": "오",
+            "6": "육",
+            "7": "칠",
+            "8": "팔",
+            "9": "구",
+            "0": "십",
             "urgent": "",
             "focused": "",
             "default": ""
