--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -9,6 +9,9 @@ bind -n M-g display-popup -E "tmux new-session lf"
 #bind -n C-s select-pane -U
 #bind -n C-l select-pane -R
 
+# unbind o
+# bind -n M-o select-pane -L
+
 # Enable RGB colour if running in xterm(1)
 
 set -g default-terminal "screen-256color"
@@ -34,7 +37,7 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 bind-key -r i run-shell "tmux neww /home/chaeng/projects/bash/tmux/configFiles.s"
 bind-key -r N run-shell "tmux neww nvim /home/chaeng/.config/nvim/init.lua"
 bind-key -r V run-shell "tmux neww bash /home/chaeng/projects/bash/fzf_tmux_dir/fzf.sh"
-bind-key -r W run-shell "tmux neww /home/chaeng/projects/bash/fzf_wallpaper.sh"
+bind-key -r W run-shell "tmux neww lf ~/Pictures/wallpapers/"
 unbind r
 
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
