--- a/dots/.config/alacritty/alacritty.yml
+++ b/dots/.config/alacritty/alacritty.yml
@@ -116,7 +116,9 @@ scheBlockmes:
       # hard contrast background - '#1d2021'
       #background: &gruvbox_dark_bg '#282828'
       #
-      background: '#1d2021'
+      background: '#101010'
+      # background: '#000000'
+      # background: '#1d2021'
       # background: '#282828'
       # soft contrast background - '#32302f'
       foreground:        '#ebdbb2'
@@ -178,8 +180,8 @@ scheBlockmes:
       text: '#000000'
       # cursor: '#bc0116'
     primary:
-      # background: '0x1a1b26'
-      background: '0x1f1f28'
+      background: '0x1a1b26'
+      # background: '0x1f1f28'
       foreground: '0xa9b1d6'
 
     # Normal colors
@@ -797,19 +799,19 @@ scheBlockmes:
 # Geist Mono
 font:
   normal:
-    family: Lilex 
+    family: Source Code Pro
     style: Regular
   bold:
-    family: Lilex 
+    family: Source Code Pro
     style: Bold
   italic:
-    family:  Lilex 
+    family:  Source Code Pro
     style: Italic
   bold_italic:
-    family: Lilex 
+    family: Source Code Pro
     style: Bold Italic
 
-  size: 11
+  size: 12
 
 window:
   opacity: 0.9
