--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -38,6 +38,8 @@ bind-key -r i run-shell "tmux neww /home/chaeng/projects/bash/tmux/configFiles.s
 bind-key -r N run-shell "tmux neww nvim /home/chaeng/.config/nvim/init.lua"
 bind-key -r V run-shell "tmux neww bash /home/chaeng/projects/bash/fzf_tmux_dir/fzf.sh"
 bind-key -r W run-shell "tmux neww lf ~/Pictures/wallpapers/"
+bind-key -r F run-shell "tmux neww lf"
+bind-key -r H run-shell "tmux neww helix /home/chaeng/.config/helix"
 unbind r
 
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
