--- a/dots/.config/sway/config
+++ b/dots/.config/sway/config
@@ -6,7 +6,7 @@ set $mod4 Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:IBM Plex Mono 10
-font pango:Hermit 9
+font pango:Input Mono 9
 
 # default_border pixel 2
 #hide_edge_borders vertical
@@ -74,6 +74,7 @@ for_window [title="\ -\ Sharing\ Indicator$"] floating enable, sticky enable
 #for_window [title="firefox"] sticky enable
 for_window [title="qemu"] floating enable
 for_window [class="kitty"] floating enable
+for_window [class="hl"] floating enable
 for_window [class="OpenGL"] floating enable 
 for_window [title="Bevy App"] floating enable 
 for_window [title="Floating Window"] floating enable 
@@ -87,6 +88,7 @@ for_window [title="hello"] floating enable
 for_window [title="Blender Render"] floating enable
 for_window [title="Meeting Chat" instance="zoom"] floating enable
 for_window [class="sdl" instance="sdl"] floating enable
+for_window [class="Sxiv"] floating enable
 for_window [class="Nautilus"] floating enable
 for_window [class="Nemo"] floating enable
 for_window [class="Zoom Meeting"] floating enable
@@ -264,8 +266,8 @@ bar {
 
 gaps inner 6
 gaps outer 6
-hide_edge_borders smart
-smart_gaps on
+# hide_edge_borders smart
+smart_gaps off
 
 #<colorclass> <border> <background> <text> <indicator> <child_border>
 client.unfocused #111111 #111111  #a9a9a9  #ff8da1
@@ -300,7 +302,7 @@ exec swayidle -w \
          timeout 400 'swaymsg "output * dpms off"' \
          resume 'swaymsg "output * dpms on"' \
          before-sleep 'swaylock -f -c 000000'
-# output "*" bg #313244 solid_color
-output "*" bg ~/Pictures/wallpapers/platform.jpg fill
-# output "*" bg ~/Pictures/wallpapers/anime-girl-smile.png fill
-# exec swaybg -m fill -i ~/Pictures/wallpapers/wallhaven-panda-forest.jpg &
+# output "*" bg #000000 solid_color
+output "*" bg ~/Pictures/wallpapers/redFlowersTown.jpg fill
+# output *" bg ~/Pictures/wallpapers/samuraiautumn.png fill
+# output "*" bg ~/Pictures/wallpapers/blue_sakura_1.jpg fill
