--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -34,6 +34,11 @@ set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
+set -g allow-passthrough on
+
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 bind-key -r i run-shell "tmux neww /home/chaeng/projects/bash/tmux/configFiles.s"
 bind-key -r N run-shell "tmux neww nvim /home/chaeng/.config/nvim/init.lua"
 bind-key -r V run-shell "tmux neww bash /home/chaeng/projects/bash/fzf_tmux_dir/fzf.sh"
@@ -41,5 +46,7 @@ bind-key -r W run-shell "tmux neww lf ~/Pictures/wallpapers/"
 bind-key -r F run-shell "tmux neww lf"
 bind-key -r H run-shell "tmux neww helix /home/chaeng/.config/helix"
 unbind r
+# unbind c
+# bind-key -r c run-shell "bash /home/chaeng/.tmux/new_window.sh"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
