--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -15,16 +15,16 @@ set $mod4 Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:Hermit 10
-font pango: Maple Mono 10
+font pango: Victor Mono 10
 
-default_border pixel 1
+# default_border pixel 3
+default_floating_border pixel 2
+
 # for_window [class=".*"] border pixel 0
 #default_border none
 #hide_edge_borders vertical
-default_floating_border pixel 2
-# default_floating_border normal
+# default_floating_border pixel 2
 #new_window none
-
 
 #for_window [class="alacritty"] pixel none
 
@@ -36,14 +36,13 @@ default_floating_border pixel 2
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 #bindsym $mod+c exec makoctl dismiss
-# exec polybar example &
 # notification
-# exec_always mako
+exec_always dunst
 exec_always picom
-# exec_always fcitx5
+exec_always fcitx5
 # exec_always --no-startup-id back4.sh 0.03 $HOME/Pictures/pixel_snow_mountain.gif
-# exec_always feh --bg-fill $HOME/Pictures/wallpapers/
-exec_always feh --bg-fill $HOME/Pictures/wallpapers/samuraiautumn.png
+exec_always feh --bg-fill /home/chaeng/Pictures/wallpapers/rip_skeleton.png
+# exec_always feh --bg-fill $HOME/Pictures/wallpapers/samuraiautumn.png
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -58,7 +57,7 @@ exec --no-startup-id xss-lock -- i3lock
 exec --no-startup-id nm-applet
 exec systemctl --user import-environment
 # exec setxkbmap us dvorak
-exec "setxkbmap -layout 'us' -variant 'dvorak'"
+exec "setxkbmap -layout 'us' -variant 'dvorak' -option ctrl:nocaps"
 #exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
 # Use pactl to adjust volume in PulseAudio.
@@ -90,7 +89,7 @@ bindsym $mod+F9 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle &
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec gnome-terminal --hide-menubar
 bindsym $mod+Return exec alacritty
-# bindsym $mod+Shift+T exec kitty
+bindsym $mod+Shift+T exec wezterm
 bindsym $mod4+t exec thunar
 bindsym $mod4+n workspace next
 bindsym $mod4+Shift+b workspace prev
@@ -109,6 +108,7 @@ for_window [class="sdl" instance="sdl"] floating enable
 for_window [class="Nautilus"] floating enable
 for_window [class="Zoom Meeting"] floating enable
 for_window [class="Thunar"] floating enable
+for_window [class="vlc"] floating enable
 bindsym $mod+r sticky toggle
 
 # kill focused window
@@ -250,16 +250,16 @@ bindsym $mod+Shift+S exec flameshot gui
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3status-rs
+    status_command i3status
     # mode hide
     # status_command polybar -c ~/.config/leftwm/themes/Ascent/polybar.config mainbar
 }
 
-gaps outer 3
-gaps inner 2
+# gaps outer 3
+# gaps inner 2
 
-# smart_borders on
-smart_gaps on
+smart_borders on
+# smart_gaps on
 
 #<colorclass> <border> <background> <text> <indicator> <child_border>
 # client.focused #26233a #232136 #f6c177 #ff8da1
