--- a/dots/.config/i3status/config
+++ b/dots/.config/i3status/config
@@ -9,23 +9,24 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+        output_format = "i3bar"
         colors = true
         color_good =     '#22ddcc'  
         color_degraded = '#dd9933'  
         color_bad =      '#aa5566'
-        interval = 5
+        # interval = 5
 }
 
-order += "run_watch DHCP"
-# order += "run_watch VPN"
+order += "run_watch VPN"
 order += "wireless _first_"
-# order += "ethernet _first_"
+order += "run_watch DHCP"
 order += "battery 0"
-order += "volume master"
 order += "tztime local"
-#order += "disk /"
-#order += "cpu_temperature 0"
-#order += "load"
+order += "volume master"
+order += "load"
+# order += "disk /"
+# order += "cpu_temperature 0"
+# order += "ethernet _first_"
 
 disk "/" {
         format = " %avail/%total"
