--- a/dots/.tmux/own.conf
+++ b/dots/.tmux/own.conf
@@ -50,5 +50,5 @@ set -g window-status-format " #[fg=#eeeeee]#{?#{==:#W,fish},#{b:pane_current_pat
 set -g window-status-current-format " #[fg=#eeeeee]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
 set -g window-status-separator ""
 
-set -g pane-active-border-style "fg=#000000"
-set -g pane-border-style "fg=#000000"
+set -g pane-active-border-style "fg=#eeeeee"
+set -g pane-border-style "fg=#eeeeee"
